# ffc-finops-operations

./: .dockerignore  .gitignore  .pre-commit-config.yaml  dev.Dockerfile  docker-compose.yaml  entrypoint.sh  env.example  prod.Dockerfile  pyproject.toml  sonar-project.properties  taplo.toml
.github/workflows/: notify-pr-activity.yaml  notify-pr-closed.yaml  notify-pr-reviewed.yml  pr-build-merge.yaml  release.yml
app/: __init__.py  auth.py  blob_storage.py  bootstrap.py  cli.py  collections.py  conf.py  constants.py  currency.py  dependencies.py  enums.py  hasher.py  logging.py  main.py  models.py  notifications.py  openapi.py  pagination.py  repositories.py  rql.py  schemas.py  telemetry.py  utils.py
app/api_clients/: __init__.py  api_modifier.py  azure.py  base.py  constants.py  exchange_rate.py  mpt.py  optscale.py  optscale_auth.py
app/auth/: auth.py  constants.py  context.py  login.py
app/charges_file_azure_storage/: upload_file.py
app/commands/: __init__.py  calculate_accounts_stats.py  check_expired_invitations.py  cleanup_obsolete_datasource_expenses.py  create_operations_account.py  fetch_datasource_expenses.py  generate_monthly_charges.py  invite_user.py  openapi.py  redeem_entitlements.py  serve.py  shell.py  update_current_month_datasource_expenses.py  update_last_month_datasource_expenses.py  update_latest_exchange_rates.py
app/db/: __init__.py  base.py  db.py  handlers.py  human_readable_pk.py  models.py
app/db/db_manager/: model_handler.py  repositories.py
app/dependencies/: api_clients.py  auth.py  db.py  path.py
app/openapi/: __init__.py  base.py  examples.py
app/routers/: accounts.py  auth.py  chargesfiles.py  employees.py  entitlements.py  expenses.py  organizations.py  systems.py  users.py
app/schemas/: accounts.py  auth.py  charges.py  core.py  employees.py  entitlements.py  expenses.py  organizations.py  systems.py  users.py
e2e/: package-lock.json  package.json  playwright.config.ts
e2e/fixtures/: fixture.ts
e2e/requests/: auth-request.ts  cloudProvisioningRequest.ts  ops-base-request.ts  portal-settings-request.ts
e2e/setup/: global-setup.ts
e2e/types/: accept-user-invitation-response.ts  enums.ts  get-datasources-by-organization-id.ts  get-employees-by-organization-id.ts  get-organizations-by-id-response.ts  invite-user-response.ts
e2e/utils/: accept-invitation.ts  delete-organization.ts  get-new-invited-user.ts  getAccessToken.ts  getNewEmployeeID.ts  is-valid-type.ts
frontend/: .npmrc  esbuild.config.js  package-lock.json  package.json  swo-ffc-api-model-5.0.0-rc.1.tgz
frontend/src/: App.tsx  index.tsx  navigation.tsx  styles.scss
migrations/: env.py
migrations/versions/: 085245566812_phase_2_models.py  09b830373981_remove_unneeded_audit_fields_from_models.py  0fcca0cf1151_create_datasourceexpense_linked_.py  105fa6bcbc13_make_expenses_datasourceexpenses_not_.py  196f292f2ea2_move_name_from_system_and_user_to_actor.py  2d33fc29176b_add_azure_blob_name_column_to_.py  2f61b7c85887_create_datasources_expenses_table.py  3679d9919a68_create_unique_constraint_on_datasource_.py  36f24766198d_add_termination_fields_to_entitlement.py  46d8a57dabef_create_datasourceexpense_linked_.py  4e8e385293da_remove_unused_fields_for_system_user_.py  51d41f5610bd_add_additional_admin.py  5da9a1a6efaa_.py  5da9a1a6efaa_merge_d144491ac1b6_and_f4b7143100d4.py  660df34b13b5_organization_billing_currency.py  6d2b289e6c92_add_datasource_name_column_to_.py  70fa90617026_make_entitlement_owner_required.py  75971b70c7de_swith_to_daily_and_total_expenses_for_.py  7915164f66be_added_organization_id.py  7aed980f816e_initial_migration.py  7cd884694384_fix_chargesfiles_name_and_enum.py  7fcf1b0ba90d_add_entitilement_ds_type_and_name.py  80ece7cdb363_add_entitlement_stats_to_account.py  84791d4463e8_make_total_expenses_datasourceexpenses_.py  8a5758ec8e50_merge_7f131c1faf6c_90830ea1c796.py  8e6d8b9091ed_add_redeem_at_to_entitlement.py  8fdb9f36e41c_add_external_id_to_actor.py  9736e8ec11a3_system_change_unique_index_to_.py  a7badd09ba07_organization_operations_external_id_.py  b34e156283c4_merge_70fa90617026_and_deded05b7d54.py  b55c60f80419_add_chargesfile.py  c16f32ef558c_rename_external_ids.py  cc8a54769323_add_external_id_to_account.py  d144491ac1b6_create_exchange_rates_model.py  d90dd09ae4ba_add_day_to_datasourceexpense.py  deded05b7d54_add_external_id_to_account.py  e2964d52315a_drop_exchangerates_and_chargesfile.py  f4b7143100d4_increase_amount_fields.py  f9b61f58c1d4_first_revision.py
tests/: conftest.py  test_accounts_api.py  test_auth.py  test_auth_api.py  test_azure.py  test_cli.py  test_cloud_accounts_api.py  test_currency.py  test_datasources_api.py  test_employees_api.py  test_entitlements_api.py  test_hasher.py  test_logging.py  test_notifications.py  test_openapi.py  test_organizations_api.py  test_schemas.py  test_systems_api.py  test_telemetry.py  test_users_api.py  test_utils.py  types.py  utils.py
tests/api/: test_accounts_api.py  test_additional_admin_api.py  test_auth.py  test_auth_api.py  test_charges_file_api.py  test_datasources_api.py  test_employees_api.py  test_entitlements_api.py  test_expenses_api.py  test_organizations_api.py  test_schemas.py  test_systems_api.py
tests/azure_blob_storage/: test_azure_upload.py
tests/cassettes/: test_get_cloud_accounts_for_organization_success.yaml  test_get_datasources_for_organization_success.yaml
tests/commands/: conftest.py  test_calculate_accounts_stats.py  test_check_expired_invitation.py  test_check_expired_invitations.py  test_cleanup_obsolete_datasource_expenses.py  test_create_operations_account.py  test_fetch_datasource_expenses.py  test_generate_monthtly_charges.py  test_invite_user.py  test_openapi.py  test_redeem_entitlements.py  test_serve.py  test_shell.py  test_update_current_month_datasource_expenses.py  test_update_last_month_datasource_expenses.py  test_update_latest_exchange_rates.py
tests/db/: models.py  test_capsql.py  test_handlers.py  test_models.py  test_transactions.py
tests/fixtures/: mock_api_clients.py
tests/utils/: test_pydantic_writer.py
(+34 files in other folders)
